Not displaying correct alignment of "Bar code number" on "Print Document" page in both mode (Lanscape & portraite) on desktop & IPAD.

--- a/assets/css/rtl-print.css
+++ b/assets/css/rtl-print.css
@@ -35,3 +35,7 @@
         page-break-before:  unset !important;
     }
 }
+
+#audit-trail-wrapper .main .checksum .code {
+  margin-left: 20px;
+}
